<resources>
    <string name="app_name">Calculator OP</string>
    <string name="Clear_ic">C</string>
    <string name="mod_op">%</string>
    <string name="divide_op">÷</string>
    <string name="multiply_op">×</string>
    <string name="minus_op">–</string>
    <string name="add_op">+</string>
    <string name="equals_to">=</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
