<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/txt_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/cyan"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/cyan"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="fill_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_bg"
            android:text="@string/Clear_ic"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_mod"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/btn_clear"
            android:background="@drawable/button_bg"
            android:text="@string/mod_op"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/btn_mod"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/ic_outline_backspace_24"
            android:padding="16dp"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/btn_del"
            android:background="@drawable/button_bg"
            android:text="@string/divide_op"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_clear"
            android:layout_marginStart="4dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/btn_white"
            android:text="@string/seven"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_mod"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_seven"
            android:background="@drawable/btn_white"
            android:text="@string/eight"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_del"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_eight"
            android:background="@drawable/btn_white"
            android:text="@string/nine"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_divide"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/btn_nine"
            android:background="@drawable/button_bg"
            android:text="@string/multiply_op"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_seven"
            android:layout_marginStart="4dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/btn_white"
            android:text="@string/four"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_eight"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_four"
            android:background="@drawable/btn_white"
            android:text="@string/five"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_nine"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_five"
            android:background="@drawable/btn_white"
            android:text="@string/six"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_multiply"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/btn_six"
            android:background="@drawable/button_bg"
            android:text="@string/minus_op"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_four"
            android:layout_marginStart="4dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/btn_white"
            android:text="@string/one"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_five"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_one"
            android:background="@drawable/btn_white"
            android:text="@string/two"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_six"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_two"
            android:background="@drawable/btn_white"
            android:text="@string/three"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_minus"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/btn_three"
            android:background="@drawable/button_bg"
            android:text="@string/add_op"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_one"
            android:layout_marginStart="4dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/btn_white"
            android:text="@string/zero"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_two"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_zero"
            android:background="@drawable/btn_white"
            android:text="@string/dot"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_double_zero"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_three"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/btn_dot"
            android:background="@drawable/btn_white"
            android:text="@string/double_zero"
            android:textSize="30sp"
            android:theme="@style/btn_white" />

        <Button
            android:id="@+id/btn_equals_to"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/btn_add"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/btn_double_zero"
            android:background="@drawable/button_bg"
            android:text="@string/equals_to"
            android:textSize="30sp"
            android:theme="@style/btn_cyan" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>